--- a/templates/basket.html
+++ b/templates/basket.html
@@ -37,10 +37,10 @@
         </tbody>
     </table>
     <div class="text-right">
-        {% if empty%}
-        <a href="/book" class="btn-lg btn-outline-success" data-bs-toggle="modal" data-bs-target="#modal">Оформить</a>
+        {% if empty %}
+        <a href="#" class="btn-lg btn-outline-login" data-bs-toggle="modal" data-bs-target="#modal">Оформить</a>
         {% else %}
-        <a href="/book" class="btn-lg btn-success">Оформить</a>
+        <a href="/book" class="btn-lg btn-login">Оформить</a>
         {% endif %}
     </div>
     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="Label" aria-hidden="true">
