--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-3">
-    <div class="row justify-content-center">
-        <div class="col-md-offset-3 col-md-6">
+<div class="container text-center">
+    <div class="row">
+        <div class="col-md-offset-3 col-md-6 mx-auto my-auto border">
             <form class="form-horizontal" action="" method="post">
                 <h2 class="heading">Авторизация</h2>
                 {{ form.hidden_tag() }}
@@ -15,9 +15,11 @@
                     {% for error in form.password.errors %}
                 <p class="alert alert-danger" role="alert">{{ error }}</p>
                 {% endfor %}
-                {{ form.submit(type="submit", class="btn btn-primary") }}
+                {{ form.submit(type="submit", class="btn btn-primary mb-2") }}
                 <div>{{ message }}</div>
             </form>
+            <hr>
+            <p class="text-center"><a href="/registration">Нет аккаунта</a></p>
         </div>
     </div>
 </div>
