--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-3">
-    <div class="row justify-content-center">
-        <div class="col-md-offset-3 col-md-6">
-            <form class="form-horizontal" action="" method="post">
+<div class="container text-center">
+    <div class="row">
+        <div class="col-md-offset-3 col-md-6 mx-auto my-auto border">
+            <form class="form-horizontal " action="" method="post">
                 <h2 class="heading">Регистрация</h2>
                 {{ form.hidden_tag() }}
                 {{ form.name(class="form-control") }}<br>
