Added statics table

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,8 +12,8 @@
     <div class="main-menu text-center">
         <h2 class="mb-5">Наше меню</h2>
         <div class="row">
-            <div class="col">
-                <div class="card">
+            <div class="col-lg">
+                <div class="card h-100 main-card">
                     <div class="card-body">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" fill="none" class="my-3">
                             <path opacity="0.07" d="M100 50C100 77.6142 77.6142 100 50 100C22.3858 100 0 77.6142 0 50C0 22.3858 22.3858 0 50 0C77.6142 0 100 22.3858 100 50Z" fill="#4D592B"/>
@@ -26,13 +26,13 @@
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M49 41.5C50.3807 41.5 51.5 42.6193 51.5 44V52C51.5 53.3807 50.3807 54.5 49 54.5C47.6193 54.5 46.5 53.3807 46.5 52V44C46.5 42.6193 47.6193 41.5 49 41.5Z" fill="#A77A58"/>
                         </svg>
                         <h5 class="card-title">Завтраки</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Завтрак – лучший способ начать день с положительными эмоциями и зарядиться на все 100%</p>
                         <a href="/menu/breakfast" class="main-btn">Посмотреть</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm">
-                <div class="card">
+            <div class="col-lg">
+                <div class="card h-100 main-card">
                     <div class="card-body">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" fill="none" class="my-3">
                             <circle opacity="0.07" cx="50" cy="50" r="50" fill="#4D592B"/>
@@ -40,13 +40,13 @@
                                   fill="#A77A58"/>
                         </svg>
                         <h5 class="card-title">Основные блюда</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Сбалансированные блюда способствуют улучшению физической и психической активности, повышению работоспособности.</p>
                         <a href="/menu/breakfast" class="main-btn">Посмотреть</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm">
-                <div class="card">
+            <div class="col-lg">
+                <div class="card h-100 main-card">
                     <div class="card-body">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" fill="none" class="my-3">
                             <circle opacity="0.07" cx="50" cy="50" r="50" fill="#4D592B"/>
@@ -60,8 +60,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm">
-                <div class="card">
+            <div class="col-lg">
+                <div class="card h-100 main-card">
                     <div class="card-body">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" fill="none" class="my-3">
                             <circle opacity="0.07" cx="50" cy="50" r="50" fill="#4D592B"/>
@@ -80,22 +80,22 @@
     <h2 class="my-5 text-center">О нас</h2>
     <div class="row">
         <div class="col">
-            <h3>Готовые комплексные обеды</h3>
-            <p class="lead" style="font-size: 24px;">У нас есть несколько готовых вариантов бизнес-ланча, чтобы Вам было проще выбирать</p>
+            <h3 class="main-h">Готовые комплексные обеды</h3>
+            <p class="lead main-text" style="font-size: 24px;">У нас есть несколько готовых вариантов бизнес-ланча, чтобы Вам было проще выбирать</p>
         </div>
         <div class="col">
-            <h3>Регулярное обновление меню</h3>
-            <p class="lead" style="font-size: 24px;">Мы обновляем позиции в меню каждую неделю</p>
+            <h3 class="main-h">Регулярное обновление меню</h3>
+            <p class="lead main-text" style="font-size: 24px;">Мы обновляем позиции в меню каждую неделю</p>
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <h3>Доставка</h3>
-            <p class="lead" style="font-size: 24px;">У нас есть доставка блюд до рабочего места</p>
+            <h3 class="main-h">Доставка</h3>
+            <p class="lead main-text" style="font-size: 24px;">У нас есть доставка блюд до рабочего места</p>
         </div>
         <div class="col">
-            <h3>Заказ и бронирование</h3>
-            <p class="lead" style="font-size: 24px;">Вы можете заранее онлайн выбрать блюда и забронировать место на нужное время</p>
+            <h3 class="main-h">Заказ и бронирование</h3>
+            <p class="lead main-text" style="font-size: 24px;">Вы можете заранее онлайн выбрать блюда и забронировать место на нужное время</p>
         </div>
     </div>
 </div>
