--- a/templates/orders.html
+++ b/templates/orders.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1 class="display-4 text-center">Заказы</h1>
-    <table class="table">
+    <table class="table table-text">
         <thead>
         <tr>
             <th>Номер заказа</th>
