--- a/templates/basket.html
+++ b/templates/basket.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-sm">
-    <table class="table">
+<div class="container">
+    <table class="table table-text">
         <thead>
         <tr>
             <th scope="col">#</th>
@@ -22,7 +22,7 @@
             <td>{{item["amount"]}}</td>
             <td>{{item["amount"] * item["price"]}}₽</td>
             <td>
-                <a href="/food_delete/{{cur_usr.id}}/{{item['food_id']}}/{{item['amount']}}" class="rounded-pill btn btn-danger">Убрать</a>
+                <a href="/food_delete/{{cur_usr.id}}/{{item['food_id']}}/{{item['amount']}}" class="rounded-pill btn btn-danger basket-delete">Убрать</a>
             </td>
         </tr>
         {% endfor %}
