--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,7 +46,7 @@
                                 {% for error in form_payment.cvc.errors %}
                                 <p class="alert alert-danger" role="alert">{{ error }}</p>
                                 {% endfor %}
-                                {{ form_payment.save(type="submit", class="btn btn-primary") }}
+                                {{ form_payment.save(type="submit", class="btn btn-login") }}
                             </form>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                                 {% for error in form_payment.cvc.errors %}
                                 <p class="alert alert-danger" role="alert">{{ error }}</p>
                                 {% endfor %}
-                                {{ form_payment.save(type="submit", class="btn btn-primary") }}
+                                {{ form_payment.save(type="submit", class="btn btn-login text-right") }}
                             </form>
                         </div>
                     </div>
