--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="main-back row text-center">
+<div class="main-back row text-center ">
     <div class="col my-auto">
-        <h1 class="display-1">Corporate<br>Dinner Dash</h1>
-        <p class="lead">Закажите вкусные блюда и бронируйте столики у нас прямо сейчас!</p>
+        <h1 class="display-1 main-display">Corporate<br>Dinner Dash</h1>
+        <p class="lead main-lead">Закажите вкусные блюда и бронируйте столики у нас прямо сейчас!</p>
         <a href="/menu/first" class="btn btn-outline-login">Заказать</a>
     </div>
 </div>
