--- a/templates/statistics_month.html
+++ b/templates/statistics_month.html
@@ -3,10 +3,10 @@
 {% block content %}
 <ul class="nav nav-tabs justify-content-center">
     <li class="nav-item">
-        <a class="nav-link" href="/add">Добавление</a>
+        <a class="nav-link" href="/statistics/month">Продажи блюда по кварталам</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/delete">Удаление</a>
+        <a class="nav-link" href="/statistics/day">День с лучшими продажами</a>
     </li>
 </ul>
 <div class="container">
@@ -15,9 +15,10 @@
         <thead>
         <tr>
             <th>Блюда</th>
-            <th>Ноябрь</th>
-            <th>Декабрь</th>
-            <th>Январь</th>
+            <th>I</th>
+            <th>II</th>
+            <th>III</th>
+            <th>IV</th>
         </tr>
         </thead>
         <tbody>
