--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="/orders">Заказы</a>
             </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/statistics">Статистика</a>
+                    <a class="nav-link" href="/statistics/month">Статистика</a>
                 </li>
             {% endif %}
             {% endif %}
